fix: 통계 API에서 빈 날짜 파라미터 처리 개선
- startDate/endDate가 빈 문자열일 때 파싱 에러 대신 기본값(현재 월) 사용
- userIdStrings 초기화 간소화
- getIntValue에 패턴 매칭 적용